# product-engineer-starter

./: .gitignore  README.md  pyproject.toml
backend/: README.md  main.py  models.py  process.py  pyproject.toml  test_main.py
backend/db/: README.md  constants.py  manager.py  models.py
backend/db/alembic/: env.py
backend/db/alembic/versions/: 3935dd37b593_initial_migration.py  68ed6ec11776_update_models_in_db.py  77eb078133d2_final_udpate_to_data_models.py  88d83ba6cd09_update_models_in_db.py  a4511d09b069_initial_migration.py
frontend/: README.md  package-lock.json  package.json
frontend/api/.openapi-generator/: FILES
frontend/api/apis/: DefaultApi.ts
frontend/api/models/: Case.ts  CreateCaseResponse.ts  EventDatetime.ts  Evidence.ts  EvidenceItem.ts  Id.ts  IsComplete.ts  IsMet.ts  Logic.ts  LogicItem.ts  Option.ts  Options.ts  ProcedureName.ts  QueryCasesRequest.ts  QueryCasesResponse.ts  Status.ts  Step.ts  Summary.ts  TimeSinceUpdated.ts  index.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/case/[case_id]/: page.tsx
frontend/components/: get_client.tsx
frontend/components/continue-upload/: index.tsx
frontend/components/guidelines-upload/: index.tsx
frontend/components/medical-record-upload/: index.tsx
frontend/components/modal/: index.tsx
frontend/context/: dashboard-context.tsx
frontend/src/api/.openapi-generator/: FILES
frontend/src/api/apis/: DefaultApi.ts
frontend/src/api/models/: Case.ts  index.ts
