[tool.poetry]
name = "product-engineer-starter"
version = "0.1.0"
description = "Engineering takehome assignment"
authors = ["nick-roberson <nicholas.roberson.95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
requests = "^2.31.0"
pydantic = "^2.6.4"
isort = "^5.13.2"
black = "^24.3.0"
alembic = "^1.13.1"
pymysql = "^1.1.0"
pytest = "^8.1.1"
httpx = "^0.27.0"
trio = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
